Cambio tipo texto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="div"> Hello World My name is Kalcio</div>
+    <h1> Hola Mundo</h1>
 </body>
 </html>
