--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Diseñador Web</title>
 </head>
 <body>
-    <h1> Hola Mundo</h1>
+    <h1>Coctelería y repostería</h1>
+     
+    <h2>Lo mejor para tus fiestas</h2>
+
+    <p>by Natalia Retamal</p>
+
+    <h2>Mis Servicios</h2>
+
+    <h3>Tortas</h3>
+    <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum augue.</p>
+
+    <h3>Canapés</h3>
+    <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum augue.</p>
+
+    <h3>Pasteles</h3>
+    <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum augue.</p>
+
+    <h2>Contacto</h2>
+
+    <p>Todos los derechos reservados. Kalcio</p>
+
 </body>
 </html>
