--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Web</title>
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -13,11 +14,11 @@
         <h1>Coctelería y repostería</h1>
     </section>
 
-    <nav>
+    <nav> 
         <a href="#">Inicio</a>
-        <a href="#">Catálogo</a>
+        <a href="#">Catálogo</a> 
         <a href="#">Historia</a>
-        <a href="#">Clientes</a>
+        <a href="#">Clientes</a> 
         <a href="#">Contactos</a>
     </nav>
 
