--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Web</title>
+    <link rel="preload" href="css/styles.css" as="style">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
     <section>
-        <h1>Coctelería y repostería</h1>
+        <h1>Coctelería y repostería <span>by Natalia Retamal</span></h1>
     </section>
 
     <nav> 
@@ -26,7 +27,6 @@
 
     <section>
         <h2>Lo mejor para tus fiestas</h2>
-        <p>by Natalia Retamal</p>
     </section>
 
     <section>
