Creación clase titulo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section>
-        <h1>Coctelería y repostería <span>by Natalia Retamal</span></h1>
+        <h1 class="titulo">Coctelería y repostería <span>by Natalia Retamal</span></h1>
     </section>
 
     <nav> 
