--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Web</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@400;500&display=swap" rel="stylesheet">
     <link rel="preload" href="css/styles.css" as="style">
     <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -14,18 +15,22 @@
     <header>
         <h1 class="titulo">Coctelería y repostería <span>by Natalia Retamal</span></h1>
     </header>
-    
+
+
     <section>
         <h2 class="titulo">Cocteles <span>y otros</span></h2>
     </section>
 
-    <nav class="navegacion-principal contenedor">
-        <a href="index.html">Inicio</a>
-        <a href="catalogo.html">Catálogo</a>
-        <a href="#">Historia</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contactos</a>
-    </nav>
+    <div class="nav-bg">
+        <nav class="navegacion-principal contenedor">
+            <a href="index.html">Inicio</a>
+            <a href="catalogo.html">Catálogo</a>
+            <a href="#">Historia</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contactos</a>
+        </nav>
+    </div>
+
 
     <img src="img/madera_inicio.jpg">
 
