--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
         </nav>
     </div>
 
-
-    <img src="img/madera_inicio.jpg">
-
-    <section>
-        <h2>Lo mejor para tus fiestas</h2>
+    <section class="hero">
+        <div class="contenido-hero">
+            <h2>Lo mejor para tus fiestas</h2>
+        </div>
     </section>
 
     <section>
