--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section class="hero">
         <div class="contenido-hero">
-            <h2>Lo mejor para tus fiestas</h2>
+            <h2>Lo más rico para tus fiestas</h2>
         </div>
     </section>
 
