--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             augue."-Carlos</p>
         <p>"Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec imperdiet
             erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum
-            augue."-Gustavo</p>
+            augue."-Gustavo Perez</p>
     </section>
 
     <section>
