--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2>Contacto</h2>
         <form>
             <fieldset>
-                <legend>Contactános llenado todos los campos</legend>
+                <legend>Contactános llenado los siguientes datos</legend>
 
                 <div>
                     <label>Nombre</label>
