Cración botón contacto

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                 </svg>
                 Santiago</p>
 
-            <a href="#">Contactar</a>
+            <a class="boton" href="#">Contactar</a>
     </section>
+
 
     <main>
         <h2>Mis Servicios</h2>
