--- a/index.html
+++ b/index.html
@@ -39,46 +39,48 @@
     </section>
 
     <section class="ubicacion">
-            <h2>Ubicación</h2>
+        <h2>Ubicación</h2>
 
-            <p>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map" width="44" height="44"
-                    viewBox="0 0 24 24" stroke-width="2" stroke="#ffec00" fill="none" stroke-linecap="round"
-                    stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <polyline points="3 7 9 4 15 7 21 4 21 17 15 20 9 17 3 20 3 7" />
-                    <line x1="9" y1="4" x2="9" y2="17" />
-                    <line x1="15" y1="7" x2="15" y2="20" />
-                </svg>
-                Santiago</p>
+        <p>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="2" stroke="#ffec00" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <polyline points="3 7 9 4 15 7 21 4 21 17 15 20 9 17 3 20 3 7" />
+                <line x1="9" y1="4" x2="9" y2="17" />
+                <line x1="15" y1="7" x2="15" y2="20" />
+            </svg>
+            Santiago</p>
 
-            <a class="boton" href="#">Contactar</a>
+        <a class="boton" href="#">Contactar</a>
     </section>
 
 
     <main>
         <h2>Mis Servicios</h2>
 
-        <section>
-            <h3>Tortas</h3>
-            <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
-                imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
-                bibendum augue.</p>
-        </section>
+        <div class="servicios">
+            <section>
+                <h3>Tortas</h3>
+                <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
+                    imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
+                    bibendum augue.</p>
+            </section>
 
-        <section>
-            <h3>Canapés</h3>
-            <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
-                imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
-                bibendum augue.</p>
-        </section>
+            <section>
+                <h3>Canapés</h3>
+                <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
+                    imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
+                    bibendum augue.</p>
+            </section>
 
-        <section>
-            <h3>Pasteles</h3>
-            <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
-                imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
-                bibendum augue.</p>
-        </section>
+            <section>
+                <h3>Pasteles</h3>
+                <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
+                    imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
+                    bibendum augue.</p>
+            </section> 
+        </div> <!-- Section-->
     </main>
 
     <section>
