Formulario lindo y más

--- a/index.html
+++ b/index.html
@@ -56,87 +56,93 @@
     </section>
 
 
-    <main>
+    <main class="contenedor sombra">
         <h2>Mis Servicios</h2>
 
         <div class="servicios">
-            <section>
+            <section class="servicio">
                 <h3>Tortas</h3>
                 <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
                     imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
                     bibendum augue.</p>
             </section>
 
-            <section>
+            <section class="servicio">
                 <h3>Canapés</h3>
-                <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
+                <p>Ma ecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
                     imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
                     bibendum augue.</p>
             </section>
 
-            <section>
+            <section class="servicio">
                 <h3>Pasteles</h3>
                 <p>Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
                     imperdiet erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas
                     bibendum augue.</p>
-            </section> 
+            </section>
         </div> <!-- Section-->
+
+
+        <section>
+            <h2>Opiniones</h2>
+            <p>"Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
+                imperdiet
+                erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum
+                augue."-Pamela</p>
+            <p>"Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
+                imperdiet
+                erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum
+                augue."-Carlos</p>
+            <p>"Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec
+                imperdiet
+                erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum
+                augue."-Gustavo Perez</p>
+        </section>
+
+        <section>
+            <h2>Contacto</h2>
+            <form class="formulario">
+                <fieldset>
+                    <legend>Contactános llenado los siguientes datos</legend>
+
+                    <div class="contenedor-campos">
+                        <div class="campo">
+                            <label>Nombre</label>
+                            <input type="text" placeholder="Nombre">
+                        </div>
+
+                        <div class="campo">
+                            <label>Teléfono</label>
+                            <input type="tel" placeholder="+569">
+                        </div>
+
+                        <div class="campo">
+                            <label>Correo</label>
+                            <input type="email" placeholder="correo@dominio.cl">
+                        </div>
+ 
+                        <div class="campo">
+                            <label>Asunto</label>
+                            <input type="text" placeholder="Asunto">
+                        </div>
+
+
+                        <div class="campo">
+                            <label>Mensaje</label>
+                            <textarea></textarea>
+                        </div>
+                    </div>
+                    <input type="submit" value="Enviar">
+
+
+                </fieldset>
+            </form>
+
+
+            <h2>o llamanos al</h2>
+            <p>+569999999</p>
+        </section>
     </main>
-
-    <section>
-        <h2>Opiniones</h2>
-        <p>"Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec imperdiet
-            erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum
-            augue."-Pamela</p>
-        <p>"Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec imperdiet
-            erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum
-            augue."-Carlos</p>
-        <p>"Maecenas quis mauris lorem. Mauris dignissim tellus dolor, in tempus lorem luctus sit amet. Donec imperdiet
-            erat ac erat rutrum pretium. Suspendisse sem augue, rhoncus placerat enim sed, egestas bibendum
-            augue."-Gustavo Perez</p>
-    </section>
-
-    <section>
-        <h2>Contacto</h2>
-        <form>
-            <fieldset>
-                <legend>Contactános llenado los siguientes datos</legend>
-
-                <div>
-                    <label>Nombre</label>
-                    <input type="text" placeholder="Nombre">
-                </div>
-
-                <div>
-                    <label>Teléfono</label>
-                    <input type="tel" placeholder="+569">
-                </div>
-
-                <div>
-                    <label>Correo</label>
-                    <input type="email" placeholder="correo@dominio.cl">
-                </div>
-
-                <div>
-                    <label>Asunto</label>
-                    <input type="text" placeholder="Asunto">
-                </div>
-
-
-                <div>
-                    <label>Mensaje</label>
-                    <textarea></textarea>
-                </div>
-
-                <input type="submit" value="Enviar">
-
-            </fieldset>
-        </form>
-
-
-        <h2>o llamanos al</h2>
-        <p>+569999999</p>
-    </section>
 
     <section>
         <h2>Sígueme en mis RRSS</h3>
