--- a/index.html
+++ b/index.html
@@ -108,32 +108,34 @@
                     <div class="contenedor-campos">
                         <div class="campo">
                             <label>Nombre</label>
-                            <input type="text" placeholder="Nombre">
+                            <input class="input-text" type="text" placeholder="Nombre">
                         </div>
 
                         <div class="campo">
                             <label>Teléfono</label>
-                            <input type="tel" placeholder="+569">
+                            <input class="input-text" type="tel" placeholder="+569">
                         </div>
 
                         <div class="campo">
                             <label>Correo</label>
-                            <input type="email" placeholder="correo@dominio.cl">
+                            <input class="input-text" type="email" placeholder="correo@dominio.cl">
                         </div>
- 
+
                         <div class="campo">
                             <label>Asunto</label>
-                            <input type="text" placeholder="Asunto">
+                            <input class="input-text" type="text" placeholder="Asunto">
                         </div>
 
 
                         <div class="campo">
                             <label>Mensaje</label>
-                            <textarea></textarea>
+                            <textarea class="input-text"></textarea>
                         </div>
                     </div>
-                    <input type="submit" value="Enviar">
 
+                    <div class="alinear-derecha">
+                        <input class="boton w-sm-100" type="submit" value="Enviar">
+                    </div>
 
                 </fieldset>
             </form>
