--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h2>Contacto</h2>
             <form class="formulario">
                 <fieldset>
-                    <legend>Contactános llenado los siguientes datos</legend>
+                    <legend>Contactános llenando los siguientes datos</legend>
 
                     <div class="contenedor-campos">
                         <div class="campo">
@@ -121,11 +121,12 @@
                             <input class="input-text" type="email" placeholder="correo@dominio.cl">
                         </div>
 
+                        <!-- 
                         <div class="campo">
                             <label>Asunto</label>
                             <input class="input-text" type="text" placeholder="Asunto">
                         </div>
-
+                         -->
 
                         <div class="campo">
                             <label>Mensaje</label>
@@ -133,7 +134,7 @@
                         </div>
                     </div>
 
-                    <div class="alinear-derecha">
+                    <div class="alinear-derecha flex">
                         <input class="boton w-sm-100" type="submit" value="Enviar">
                     </div>
 
@@ -166,7 +167,7 @@
             </p>
     </section>
 
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados. Kalcio</p>
     </footer>
 </body>
