--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
     <footer class="footer">
         <p>Todos los derechos reservados. Kalcio</p>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
