--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="alinear-derecha flex">
-                        <input class="boton w-sm-100" type="submit" value="Enviar">
+                        <input class="boton w-sm-100 boton--principal" type="submit" value="Enviar">
                     </div>
 
                 </fieldset>
@@ -143,7 +143,7 @@
 
 
             <h2>o llamanos al</h2>
-            <p>+569999999</p>
+            <h2>+569999999</h2>
         </section>
     </main>
 
